--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "license": "MIT",
   "dependencies": {
     "@chainlink/contracts": "^0.5.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "dotenv": "^16.0.3",
     "ethers": "^5.4.7",
     "hardhat": "^2.11.1",
+    "hardhat-deploy": "^0.11.18",
     "solc": "^0.8.17"
   },
   "scripts": {
